--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Health Report</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_info">Info</string>
     <string name="title_notifications">Notifications</string>
+    <string name="image_description">Image of Covid-19 actions.</string>
 </resources>
