--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Health Report</string>
     <string name="title_home">Home</string>
     <string name="title_info">Info</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_report">Report</string>
     <string name="image_description">Image of Covid-19 actions.</string>
     <string name="title_message">Help Stop Covid-19</string>
     <string name="covid_19_live_tracker">Covid-19 Tracker</string>
