--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_info">Info</string>
     <string name="title_report">Report</string>
     <string name="image_description">Image of Covid-19 actions.</string>
-    <string name="title_message">Help Stop Covid-19</string>
+    <string name="title_message">Health Report</string>
     <string name="covid_19_live_tracker">Covid-19 Tracker</string>
     <string name="kenya">Kenya</string>
     <string name="global">Global</string>
@@ -18,9 +18,15 @@
     <string name="kcd_133k">KCD 133K</string>
     <string name="long_description">Some Very Long Description.</string>
     <string name="short_description">Offence Short Description</string>
-    <string name="matatu_details">Matatu Details</string>
     <string name="culprint_name">Culprint Name</string>
     <string name="culprit">Culprit:</string>
+    <string name="sacco_name">Sacco Name</string>
+    <string name="offender">Offender</string>
+    <string name="offence">Offence</string>
+    <string name="route_name">Route Name</string>
+    <string name="plate_number">Plate Number</string>
+    <string name="matatu_details">Matatu Details</string>
+    <string name="report_matatu_offences">Report Matatu offences</string>
     <string-array name="countries">
         <item>Global</item>
         <item>Kenya</item>
